<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".activity_move">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/unbounded_light"
            android:text="@string/return_plus_"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible">

        </android.widget.Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/unbounded_light"
            android:gravity="center"
            android:text="@string/add_plus_add"
            android:textColor="@color/white"
            android:textSize="18sp">

        </TextView>

        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="9dp"
            android:background="@android:color/transparent"
            android:visibility="invisible">

        </android.widget.Button>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/figure"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <android.widget.Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/unbounded_light"
            android:gravity="center"
            android:text="@string/plus"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="visible"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.widget.Button>

        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/unbounded_light"
            android:gravity="center"
            android:text="@string/mines"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button10"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toTopOf="parent">

        </android.widget.Button>

        <android.widget.Button

            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/verywind"
            android:fontFamily="@font/unbounded_light"
            android:gravity="center"
            android:text="@string/move"
            android:textAllCaps="false"
            android:textColor="@color/blackblue"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.widget.Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>