<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="400dp"
    android:background="@drawable/verynotwind"
    android:orientation="vertical"
    tools:context=".ui.fragments.Login.LoginFragmentEmail">

    <LinearLayout

        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/figure"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        tools:layout_editor_absoluteX="9dp">

        <LinearLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="4dp"

            android:background="@drawable/figure"

            android:backgroundTint="#D9D9D8"
            android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="correct answer_icon"
                android:gravity="center"
                android:src="@drawable/phone">

            </ImageView>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextPhoneLogin"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/unbounded_light"
            android:gravity="start"
            android:hint="@string/phone_ema"
            android:inputType="phone"
            android:textColor="@color/blackblue"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/unbounded_light"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/very_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

    </TextView>

    <LinearLayout

        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/figure"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/figure"
            android:backgroundTint="#D9D9D8"
            android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="correct answer_icon"
                android:gravity="center"
                android:src="@drawable/email">


            </ImageView>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmailAddressLogin"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/unbounded_light"
            android:gravity="start"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/blackblue"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/figure"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:layout_editor_absoluteX="9dp">


        <LinearLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/figure"
            android:backgroundTint="#D9D9D8"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="correct answer_icon"
                android:src="@drawable/baseline_lock_24">

            </ImageView>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/unbounded_light"
            android:hint="@string/password_my"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/blackblue"
            android:textSize="18sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/figure"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:layout_editor_absoluteX="9dp">


        <LinearLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/figure"
            android:backgroundTint="#D9D9D8"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="correct answer_icon"
                android:src="@drawable/baseline_lock_24">

            </ImageView>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/unbounded_light"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/blackblue"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="9dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="correct answer_icon"
            android:src="@mipmap/ic_launcher_foreground">

        </ImageView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/unbounded_light"
            android:gravity="center"
            android:text="@string/lotus_track_em"
            android:textColor="@color/very_white"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>