<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    tools:context=".ui.activities.RegistrationPage">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="348dp"
        android:layout_height="400dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="89dp"
        android:background="@drawable/verynotwind"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="225dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container1">

        <android.widget.Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="18dp"
            android:background="@drawable/figure"
            android:fontFamily="@font/unbounded_light"
            android:onClick="clickSign_in"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/blackblue"
            android:textSize="18sp"
            android:visibility="visible">

        </android.widget.Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/unbounded_light"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="@color/very_white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        </TextView>

        <Button
            android:id="@+id/buttonSign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/unbounded_light"
            android:onClick="clickSign_up"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewNoAccount"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>